--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,32 @@
 {
   "homePage": "Home Page",
   "menuPage": "Menu Page",
-  "locationPage": "Location Page"
+  "locationPage": "Location Page",
+  "dessert": "Dessert",
+  "burger": "Burger",
+  "pizza": "Pizzas",
+  "chicken": "Chicken",
+  "wrap": "Wrap",
+  "arab": "Arab",
+  "turksih": "Turkish",
+  "middleEast": "Middle East",
+  "kebab": "Kabob",
+  "plov": "Plov",
+  "steak": "Steak",
+  "somsa": "Somsa",
+  "searchPlaceholder": "Search for restaurants, meals, dishes",
+  "biryani": "Biryani",
+  "shawarma": "Shawarma",
+  "shashlik": "Shashlik",
+  "mediterranean": "Mediterranean Pizza",
+  "chickenbiryani": "Chicken Biryani",
+  "satayset": "Satay set",
+  "hummus": "Hummus",
+  "hummusset": "Hummus set",
+  "kebabHose": "Kebab House",
+  "asianHalal": "Asian Halal",
+  "samarkandCafe": "Samarkand Cafe",
+  "tashkentBurger": "Tashkent Burger",
+  "cairoHalal": "Cairo Halal",
+  "noodleHalal": "Noodle Halal"
 }
