--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,5 +1,32 @@
 {
   "homePage": "Главная страница",
   "menuPage": "Меню страница",
-  "locationPage": "Местоположение страница"
+  "locationPage": "Местоположение страница",
+  "dessert": "Дессерт",
+  "burger": "Бургер",
+  "pizza": "Пицца",
+  "chicken": "Курица",
+  "wrap": "Лаваш",
+  "arab": "Араб",
+  "turksih": "Турецкий",
+  "middleEast": "Средни",
+  "kebab": "Шашлык",
+  "plov": "Плов",
+  "steak": "Стейк",
+  "somsa": "Сомса",
+  "searchPlaceholder": "Поиск по ресторанам, блюдам, блюдам",
+  "biryani": "Бирияни",
+  "shawarma": "Шаварма",
+  "shashlik": "Шашлик",
+  "mediterranean": "Средне пицца",
+  "chickenbiryani": "Курий Бирияни",
+  "satayset": "Сатайсет",
+  "hummus": "Хумус",
+  "hummusset": "Хумус сет",
+  "kebabHose": "Кебаб Хоус",
+  "asianHalal": "Азиа Халал",
+  "samarkandCafe": "Самарканд Кафе",
+  "tashkentBurger": "Ташкент Бургер",
+  "cairoHalal": "Каирский Халал",
+  "noodleHalal": "Нудл Халал"
 }
