--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -1,5 +1,31 @@
 {
-  "homePage": "Bosh sahifa",
   "menuPage": "Menyu sahifa",
-  "locationPage": "Lokatsiya sahifa"
+  "locationPage": "Lokatsiya sahifa",
+  "dessert": "Dessert",
+  "burger": "Burger",
+  "pizza": "Pitsa",
+  "chicken": "Tovuq",
+  "wrap": "Lavash",
+  "arab": "Arab",
+  "turksih": "Turkcha",
+  "middleEast": "Sharqona",
+  "kebab": "Kabob",
+  "plov": "Osh",
+  "steak": "Steak",
+  "somsa": "Somsa",
+  "searchPlaceholder": "Restoranlar, ovqatlar, idishlarni qidiring",
+  "biryani": "Biryani",
+  "shawarma": "Shawarma",
+  "shashlik": "Shashlik",
+  "mediterranean": "O'rta er pizza",
+  "chickenbiryani": "Tovuq Biryani",
+  "satayset": "Satay to'plami",
+  "hummus": "Humus",
+  "hummusset": "Humus to'plami",
+  "kebabHose": "Kebab House",
+  "asianHalal": "Asian Halal",
+  "samarkandCafe": "Samarkand Cafe",
+  "tashkentBurger": "Tashkent Burger",
+  "cairoHalal": "Cairo Halal",
+  "noodleHalal": "Noodle Halal"
 }
