--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,5 +28,7 @@
   "samarkandCafe": "Samarkand Cafe",
   "tashkentBurger": "Tashkent Burger",
   "cairoHalal": "Cairo Halal",
-  "noodleHalal": "Noodle Halal"
+  "noodleHalal": "Noodle Halal",
+  "forYou": "Only for You",
+  "hotProduct": "Hot Product"
 }
