--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -28,5 +28,7 @@
   "samarkandCafe": "Самарканд Кафе",
   "tashkentBurger": "Ташкент Бургер",
   "cairoHalal": "Каирский Халал",
-  "noodleHalal": "Нудл Халал"
+  "noodleHalal": "Нудл Халал",
+  "hotProduct": "Горячий продукт",
+  "onlyForYou": "Только для вас"
 }
