--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -27,5 +27,7 @@
   "samarkandCafe": "Samarkand Cafe",
   "tashkentBurger": "Tashkent Burger",
   "cairoHalal": "Cairo Halal",
-  "noodleHalal": "Noodle Halal"
+  "noodleHalal": "Noodle Halal",
+  "hotProduct": "Qaynoq mahsulotlar",
+  "onlyForYou": "Faqat siz uchun"
 }
