--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -46,5 +46,6 @@
   "olives": "Оливки",
   "souse": "Соус",
   "delivery": "Доставка",
-  "totla": "Итого"
+  "totla": "Итого",
+  "addCard": "Добавить"
 }
