--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -45,5 +45,6 @@
   "olives": "Zaytun",
   "souse": "Souse",
   "delivery": "Yetkazish",
-  "totla": "Jami"
+  "totla": "Jami",
+  "addCard": "Qo'shish"
 }
