--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -46,5 +46,6 @@
   "olives": "Olives",
   "souse": "Souse",
   "delivery": "Delivery",
-  "totla": "Total"
+  "totla": "Total",
+  "addCard": "Add"
 }
