--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,45 +1,44 @@
 {
-  "homePage": "Home Page",
-  "menuPage": "Menu Page",
-  "locationPage": "Location Page",
+  "menuPage": "Menu page",
+  "locationPage": "Location page",
   "dessert": "Dessert",
   "burger": "Burger",
-  "pizza": "Pizzas",
+  "pizza": "Pizza",
   "chicken": "Chicken",
   "wrap": "Wrap",
   "arab": "Arab",
   "turksih": "Turkish",
   "middleEast": "Middle East",
-  "kebab": "Kabob",
-  "plov": "Plov",
+  "kebab": "Kebab",
+  "plov": "Osh",
   "steak": "Steak",
   "somsa": "Somsa",
-  "searchPlaceholder": "Search for restaurants, meals, dishes",
+  "searchPlaceholder": "Search restaurants, dishes and tableware",
   "biryani": "Biryani",
   "shawarma": "Shawarma",
   "shashlik": "Shashlik",
-  "mediterranean": "Mediterranean Pizza",
+  "mediterranean": "Mediterranean",
   "chickenbiryani": "Chicken Biryani",
-  "satayset": "Satay set",
+  "satayset": "Satay Set",
   "hummus": "Hummus",
-  "hummusset": "Hummus set",
-  "kebabHose": "Kebab House",
+  "hummusset": "Hummus Set",
+  "kebabHose": "Kebab Hose",
   "asianHalal": "Asian Halal",
   "samarkandCafe": "Samarkand Cafe",
   "tashkentBurger": "Tashkent Burger",
   "cairoHalal": "Cairo Halal",
   "noodleHalal": "Noodle Halal",
-  "forYou": "Only for You",
-  "hotProduct": "Hot Product",
-  "detailDescription": "Detail Description",
+  "hotProduct": "Hot Products",
+  "onlyForYou": "Only for you",
+  "detailDescription": "Detailed information",
   "sold": "Sold",
   "size": "Size",
-  "required": "Required",
+  "required": "Address",
   "small": "Small",
   "medium": "Medium",
   "large": "Large",
   "extraLarge": "Extra Large",
-  "extraFree": "No extra Free",
+  "extraFree": "Free",
   "exclude": "Exclude",
   "orginal": "Original",
   "onion": "Onion",
@@ -47,5 +46,5 @@
   "souse": "Souse",
   "delivery": "Delivery",
   "totla": "Total",
-  "addCard": "Add"
+  "addCard": "Добавить"
 }
