--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,51 +1,50 @@
 {
-  "homePage": "Главная страница",
   "menuPage": "Меню страница",
-  "locationPage": "Местоположение страница",
-  "dessert": "Дессерт",
+  "locationPage": "Локация страница",
+  "dessert": "Десерт",
   "burger": "Бургер",
   "pizza": "Пицца",
   "chicken": "Курица",
   "wrap": "Лаваш",
-  "arab": "Араб",
-  "turksih": "Турецкий",
-  "middleEast": "Средни",
-  "kebab": "Шашлык",
-  "plov": "Плов",
-  "steak": "Стейк",
+  "arab": "Arab",
+  "turksih": "Туркменский",
+  "middleEast": "Средний Восток",
+  "kebab": "Кабыб",
+  "plov": "Ош",
+  "steak": "Steak",
   "somsa": "Сомса",
-  "searchPlaceholder": "Поиск по ресторанам, блюдам, блюдам",
-  "biryani": "Бирияни",
-  "shawarma": "Шаварма",
-  "shashlik": "Шашлик",
-  "mediterranean": "Средне пицца",
-  "chickenbiryani": "Курий Бирияни",
-  "satayset": "Сатайсет",
-  "hummus": "Хумус",
-  "hummusset": "Хумус сет",
-  "kebabHose": "Кебаб Хоус",
-  "asianHalal": "Азиа Халал",
-  "samarkandCafe": "Самарканд Кафе",
+  "searchPlaceholder": "Поиск ресторанов, блюд и посуды",
+  "biryani": "Быран",
+  "shawarma": "Шаурма",
+  "shashlik": "Шашлык",
+  "mediterranean": "Средний Восток пицца",
+  "chickenbiryani": "Курица Быран",
+  "satayset": "Сатай набор",
+  "hummus": "Хуммос",
+  "hummusset": "Хуммос набор",
+  "kebabHose": "Дом Кабыба",
+  "asianHalal": "Азиатский Халал",
+  "samarkandCafe": "Кафе Самарканд",
   "tashkentBurger": "Ташкент Бургер",
-  "cairoHalal": "Каирский Халал",
-  "noodleHalal": "Нудл Халал",
-  "hotProduct": "Горячий продукт",
+  "cairoHalal": "Каир Халал",
+  "noodleHalal": "Лапша Халал",
+  "hotProduct": "Горячие продукты",
   "onlyForYou": "Только для вас",
-  "detailDescription": "Подробное описание",
-  "sold": "Продано",
+  "detailDescription": "Подробная информация",
+  "sold": "Проданный",
   "size": "Размер",
-  "required": "Обязательно",
+  "required": "Адрес",
   "small": "Маленький",
   "medium": "Средний",
   "large": "Большой",
   "extraLarge": "Очень большой",
-  "extraFree": "бесплатно",
-  "exclude": "исключить",
-  "orginal": "Оригинальная",
+  "extraFree": "Бесплатно",
+  "exclude": "Исключение",
+  "orginal": "Оригинал",
   "onion": "Лук",
-  "olives": "Оливки",
+  "olives": "Зайтун",
   "souse": "Соус",
   "delivery": "Доставка",
-  "totla": "Итого",
+  "totla": "Всего",
   "addCard": "Добавить"
 }
