--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -46,5 +46,6 @@
   "souse": "Souse",
   "delivery": "Delivery",
   "totla": "Total",
-  "addCard": "Добавить"
+  "addCard": "Add",
+  "catgDetailDescription": "Real Turkish chicken burger from real Turkish Fast food"
 }
