--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -46,5 +46,6 @@
   "souse": "Соус",
   "delivery": "Доставка",
   "totla": "Всего",
-  "addCard": "Добавить"
+  "addCard": "Добавить",
+  "catgDetailDescription": "Настоящий турецкий куриный бургер от настоящий турецкий фастфуд"
 }
