--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -46,5 +46,6 @@
   "souse": "Souse",
   "delivery": "Yetkazish",
   "totla": "Jami",
-  "addCard": "Qo'shish"
+  "addCard": "Qo'shish",
+  "catgDetailDescription": "Haqiqiy turk tovuqli burgeri haqiqiy turk tez taomlari"
 }
