--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -47,5 +47,12 @@
   "delivery": "Доставка",
   "totla": "Всего",
   "addCard": "Добавить",
-  "catgDetailDescription": "Настоящий турецкий куриный бургер от настоящий турецкий фастфуд"
+  "catgDetailDescription": "Настоящий турецкий куриный бургер от настоящий турецкий фастфуд",
+  "apply": "Применить",
+  "checkout": "Оформить заказ",
+  "cart": "Корзина",
+  "saved": "Сохранено",
+  "all": "Все",
+  "storeCupon": "Купон магазина",
+  "cuponApplyed": "купон был применен"
 }
