--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,5 +54,6 @@
   "saved": "Saved",
   "all": "All",
   "storeCupon": "Store cupon",
-  "cuponApplyed": "coupon has been applied"
+  "cuponApplyed": "coupon has been applied",
+  "restaurants": "Restaurants near you"
 }
