--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -54,5 +54,6 @@
   "saved": "Saqlangan",
   "all": "Barcha",
   "storeCupon": "Magazin kupon",
-  "cuponApplyed": "kupon qo'llanildi"
+  "cuponApplyed": "kupon qo'llanildi",
+  "restaurants": "Sizga yaqin restoranlar"
 }
